--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <ng-view></ng-view>
 
+<script src='app/config/module/route-config.js'></script>
+<script src='app/config/module/module-config.js'></script>
+<script src='app/config/run/module-run.js'></script>
 <script src='app/app.js'></script>
 <script src='app/views/home/home-ctrl.js'></script>
+<script src='app/views/account/account-ctrl.js'></script>
 </body>
 </html>
